extra/departments-v2/departments-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: departments-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: departments-service
              servicePort: 8000
          - path: /abc
            backend:
              serviceName: departments-service
              servicePort: 8000
